--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "migrate-dev": "prisma migrate dev",
     "migrate": "prisma migrate deploy",
     "test-unit": "vitest",
-    "test-start": "run-s test-unit test-e2e",
+    "test-start": "run-s test-unit",
     "postinstall": "pnpm generate"
   },
   "prisma": {
