--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 # Make sure to override these in deployment
-DATABASE_URL=postgresql://fabrykapomyslow:fabrykapomyslow_pass@localhost:5433/fabrykapomyslow
+DATABASE_URL="postgresql://fabrykapomyslow:fabrykapomyslow_pass@localhost:5433/fabrykapomyslow"
+SECRET_KEY="05rRaf£Z9~B2Z<YJ\Xr44nT;7Ne0KQ)+May.I-#3}EbSPURiGM"
