--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "@trpc/next": "npm:@trpc/next@next",
     "@trpc/react-query": "npm:@trpc/react-query@next",
     "@trpc/server": "npm:@trpc/server@next",
+    "bcrypt": "^5.1.1",
     "clsx": "^2.0.0",
+    "jsonwebtoken": "^9.0.2",
     "next": "^14.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -44,6 +46,8 @@
     "zod": "^3.0.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20.10.0",
     "@types/react": "^18.3.1",
     "@typescript-eslint/eslint-plugin": "^7.16.1",
